<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <EditText
        android:id="@+id/updateLoginField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updatePasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/updateLoginField"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/updateLoginField"
        app:layout_constraintTop_toBottomOf="@+id/updateLoginField" />

    <EditText
        android:id="@+id/updateEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/updatePasswordField"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/updatePasswordField"
        app:layout_constraintTop_toBottomOf="@+id/updatePasswordField" />

    <EditText
        android:id="@+id/updatePhoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/updateEmailField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateEmailField"
        app:layout_constraintTop_toBottomOf="@+id/updateEmailField" />

    <EditText
        android:id="@+id/updateLicenceField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/updatePhoneField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updatePhoneField"
        app:layout_constraintTop_toBottomOf="@+id/updatePhoneField" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/updateLicenceField"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/updateLicenceField"
        app:layout_constraintTop_toBottomOf="@+id/updateLicenceField"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/updateLoginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name_label"
        app:layout_constraintBottom_toTopOf="@+id/updateLoginField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/updatePasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        app:layout_constraintBottom_toTopOf="@+id/updatePasswordField"
        app:layout_constraintEnd_toEndOf="@+id/updateLoginLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateLoginLabel"
        app:layout_constraintTop_toBottomOf="@+id/updateLoginField"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/updateEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        app:layout_constraintBottom_toTopOf="@+id/updateEmailField"
        app:layout_constraintEnd_toEndOf="@+id/updatePasswordLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updatePasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/updatePasswordField"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/updatePhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_label"
        app:layout_constraintBottom_toTopOf="@+id/updatePhoneField"
        app:layout_constraintEnd_toEndOf="@+id/updateEmailLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateEmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/updateEmailField"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/updateLicenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/licence_label"
        app:layout_constraintBottom_toTopOf="@+id/updateLicenceField"
        app:layout_constraintEnd_toEndOf="@+id/updatePhoneLabel"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="@+id/updatePhoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/updatePhoneField"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>